# support-gen-3D

./: .gitignore  LICENSE  README.md  pyproject.toml
Combined/: combined.py  slc_support_structure.py  stl_algo.py
Combined/output/: 8_output.stl
Combined/src/: 8.slc  8.stl  8_self_intersect.slc  box_02.slc  inclined_cuboid_53.stl  l.stl  overlaps.stl  rotated_cylinder.stl  rotated_prism_vedo.stl  rounded_box_and_sphere.stl  sphere.stl  star.stl  test.slc  torus.slc
SLC/: slc_reader.py  slc_support_structure_1.py
SLC/slc_samples/: alien_emissary.slc  candy_cane.slc  cube.slc  l.slc  sphere_hollow.slc  star.slc
tests/unit/: PointFinder_HY_Tests.py  algo_testing.py  combined_testing.py  non_functional_tests.py  slc_reader_tests.py  slc_support_tests.py  slc_tests.py  stl_algo_testing.py
tests/unit/src/: box.stl  candy_cane.stl  l.slc
